--- a/OpenSea.css
+++ b/OpenSea.css
@@ -16,6 +16,7 @@ body {
 }
 .app {
   width: 1500px;
+  padding: 20px 0;
   /* overflow: hidden; */
 }
 
@@ -38,13 +39,30 @@ h3 {
   font-size: 2rem;
 }
 
+h4 {
+  font-size: 20px;
+}
+
 /* =====header===== */
 
-.head-top {
+.headposfix {
   width: 100%;
-  height: 72px;
+  height: 90px;
+  position: fixed;
+  left: 0;
+  z-index: 998;
+}
+
+.head-top {
+  width: 1500px;
   display: flex;
   align-items: center;
+  position: fixed;
+  z-index: 999;
+}
+
+.sticky {
+  background-color: #000;
 }
 
 .Logo {
@@ -283,6 +301,7 @@ h3 {
 .head-bot {
   width: 100%;
   height: 70px;
+  margin-top: 100px;
 }
 
 .bot-nav {
@@ -308,7 +327,7 @@ h3 {
 
 .banner {
   width: 100%;
-  height: 560px;
+  height: 620px;
 }
 
 .SlideShow {
@@ -337,7 +356,7 @@ h3 {
 }
 
 .SlideView img {
-  width: 1460px;
+  width: 1500px;
   height: 100%;
   object-fit: cover;
   object-position: center;
@@ -379,6 +398,7 @@ h3 {
   bottom: 2rem;
   left: 2rem;
   right: 2rem;
+  pointer-events: none;
 }
 
 .banner-conten-left {
@@ -409,15 +429,6 @@ h3 {
   color: #fff;
   font-size: 1.2rem;
   font-weight: 700;
-}
-.sticky {
-  z-index: 999;
-  position: fixed;
-  padding: 20px;
-  top: 0;
-  left: 0;
-  background-color: #000;
-  border-bottom: 1px solid #fff;
 }
 
 /* =====main====== */
@@ -637,7 +648,125 @@ footer {
   justify-content: center;
 }
 
-.footter-first {
-  background-color: red;
+.footer-top {
+  padding: 40px 0;
+  color: white;
+}
+
+.footer-top p {
+  font-size: 16px;
+}
+
+.footer-login {
+  width: 100%;
+  display: flex;
+}
+
+.footer-top input {
+  padding: 7px 10px;
+  font-size: 1.2rem;
+  border: 1px solid #858f99;
+  outline: none;
+  background-color: transparent;
+  color: white;
+  border-radius: 12px;
+  flex: 1;
+  margin-right: 20px;
+  transition: 0.3s;
+}
+
+.footer-top input::placeholder {
+  color: #858f99;
+}
+
+.footer-top input:hover {
+  border: 1px solid #fff;
+}
+
+.footer-top button {
+  padding: 14px 42px;
+  border-radius: 12px;
+  font-size: 18px;
+  color: white;
+  background-color: #2081e2;
+  font-weight: 700;
+  border: none;
+  outline: none;
+}
+
+.foot__right i {
+  padding: 20px;
+  background-color: #353840;
+  color: white;
+  font-size: 1.4rem;
+  border-radius: 12px;
+  margin-right: 20px;
+}
+
+.foot__right i:hover {
+  background-color: #2081e2;
+}
+
+.footer-middle {
+  padding: 40px 0;
+  color: white;
+}
+
+.endfoot {
+  margin-bottom: 50px;
+}
+
+.footerbot {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px 0;
+  color: white;
+}
+
+/* ============================================================= */
+
+/* img {
+  width: 100%;
+  height: 100%;
+  object-position: center;
+  object-fit: cover;
+  transition: 0.5s;
+} */
+
+/* .image {
+  width: 18%;
+  height: 200px;
+  border-radius: 7px;
+  overflow: hidden;
+  margin: 10px 0;
+}
+
+.image:hover img {
+  transform: scale(1.2);
+} */
+
+.gallery {
+  z-index: 9999;
+  position: fixed;
+  width: 100vw;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 0.5s;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.from-box {
+  width: 500px;
   height: 500px;
+  background-color: red;
+}
+
+.showgallery {
+  opacity: 1;
+  pointer-events: all;
 }
