--- a/grid.css
+++ b/grid.css
@@ -302,6 +302,11 @@
     margin-right: -30px;
   }
 
+  .row.big-gutter {
+    margin-left: -60px;
+    margin-right: -60px;
+  }
+
   .col {
     padding-left: 12px;
     padding-right: 12px;
@@ -310,6 +315,11 @@
   .row.sm-gutter .col {
     padding-left: 30px;
     padding-right: 30px;
+  }
+
+  .row.big-gutter .col {
+    padding-left: 60px;
+    padding-right: 60px;
   }
 
   .p-0 {
