--- a/style/style.css
+++ b/style/style.css
@@ -1,50 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap");
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
-}
-body {
-  display: flex;
-  justify-content: center;
-  background: linear-gradient(0deg, #202225, #000);
-  /* height: 100vh; */
-}
-.class-bg-body {
-  background: linear-gradient(0deg, #fff, #000);
-}
-.app {
-  width: 1500px;
-  padding: 20px 0;
-  /* overflow: hidden; */
-}
-
-/* =====base====== */
-a {
-  text-decoration: none;
-  color: unset;
-}
-
-li {
-  list-style: none;
-}
-
-.mb-20 {
-  margin-bottom: 20px;
-}
-
-h3 {
-  color: white;
-  font-size: 2rem;
-}
-
-h4 {
-  font-size: 20px;
-}
-
 /* =====header===== */
-
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap");
 .headposfix {
   width: 100%;
   height: 90px;
@@ -83,6 +38,7 @@ h4 {
   align-items: center;
   padding: 5px 7px;
   background: #2d2e2f;
+  -webkit-backdrop-filter: blur(100px);
   backdrop-filter: blur(100px);
   box-shadow: 20px 20px 60px #000, -20px -20px 60px #000;
   border-radius: 12px;
@@ -107,6 +63,10 @@ h4 {
   background-color: transparent;
   color: white;
   flex: 1;
+}
+
+.search input::-moz-placeholder {
+  color: #fff;
 }
 
 .search input::placeholder {
@@ -171,8 +131,8 @@ h4 {
   right: 0;
   left: unset;
   font-size: 1rem;
-  height: 400px;
-  width: 220px;
+  height: 415px;
+  width: 240px;
 }
 
 .Drops_element,
@@ -180,7 +140,7 @@ h4 {
 .Resources_element,
 .User_element,
 .Language_element {
-  padding-left: 10px;
+  padding: 0px 10px;
 }
 
 .Resources_element:last-child {
@@ -247,10 +207,10 @@ h4 {
     opacity: 1;
   }
 }
-
 .night_mode {
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 
 .toggle_night {
@@ -260,7 +220,6 @@ h4 {
   display: flex;
   align-items: center;
   padding: 5px;
-  margin-left: 20px;
   border-radius: 50px;
 }
 
@@ -272,6 +231,7 @@ h4 {
   transition: 0.5s;
   transform: translateX(30px);
 }
+
 .iconsun {
   display: none;
 }
@@ -288,6 +248,7 @@ h4 {
 .top-nav-right .infor {
   display: flex;
 }
+
 .top-nav-right .content li,
 .top-nav-right .infor li {
   margin: 0 20px;
@@ -303,12 +264,10 @@ h4 {
   height: 70px;
   margin-top: 100px;
 }
-
-.bot-nav {
+.head-bot .bot-nav {
   display: flex;
 }
-
-.bot-nav li {
+.head-bot .bot-nav li {
   padding: 4px 16px;
   margin: 20px 10px;
   border-radius: 20px;
@@ -316,12 +275,7 @@ h4 {
   font-weight: 600;
   cursor: pointer;
 }
-
-.bot-nav li:hover {
-  background: #b3b3b3;
-}
-
-.active {
+.head-bot .bot-nav li:hover {
   background: #b3b3b3;
 }
 
@@ -329,47 +283,42 @@ h4 {
   width: 100%;
   height: 620px;
 }
-
-.SlideShow {
-  width: 100%;
-  height: 100%;
+.banner .SlideShow {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  height: 100%;
   position: relative;
 }
-
-.SlideShow:hover i {
+.banner .SlideShow:hover i {
   display: inline-block;
 }
-
-.SlideMain {
+.banner .SlideShow .SlideMain {
   width: 100%;
   height: 100%;
   overflow: hidden;
   border-radius: 3rem;
 }
-
-.SlideView {
+.banner .SlideShow .SlideMain .SlideView {
   display: flex;
   transition: 0.7s;
 }
-
-.SlideView img {
+.banner .SlideShow .SlideMain .SlideView img {
   width: 1500px;
   height: 100%;
+  -o-object-fit: cover;
   object-fit: cover;
+  -o-object-position: center;
   object-position: center;
   transition: 0.4s;
   filter: grayscale(70%);
 }
-
-.SlideView img:hover {
+.banner .SlideShow .SlideMain .SlideView img:hover {
   transform: scale(1.1);
   filter: grayscale(0%);
 }
-
-.SlideShow i {
+.banner .SlideShow i {
   font-size: 2rem;
   padding: 5px 10px;
   border-radius: 50%;
@@ -378,20 +327,17 @@ h4 {
   display: none;
   cursor: pointer;
 }
-
-.SlidePrev {
+.banner .SlideShow .SlidePrev {
   top: 50%;
   transform: translateY(-50%);
   left: -10px;
 }
-
-.SlideNext {
+.banner .SlideShow .SlideNext {
   top: 50%;
   transform: translateY(-50%);
   right: -10px;
 }
-
-.banner-content {
+.banner .SlideShow .banner-content {
   position: absolute;
   display: flex;
   justify-content: space-between;
@@ -400,63 +346,58 @@ h4 {
   right: 2rem;
   pointer-events: none;
 }
-
-.banner-conten-left {
+.banner .SlideShow .banner-content .banner-conten-left {
   color: #fff;
   font-size: 1.2rem;
   font-weight: 700;
 }
-
-.banner-conten-left img {
+.banner .SlideShow .banner-content .banner-conten-left img {
   width: 100px;
   height: 100px;
   border-radius: 50%;
   border: 1px solid #fff;
 }
-
-.banner-conten-right {
+.banner .SlideShow .banner-content .banner-conten-right {
   display: flex;
   align-items: end;
 }
-
-.banner-conten-right button {
+.banner .SlideShow .banner-content .banner-conten-right button {
   padding: 1rem 1.3rem;
   border: none;
   outline: none;
   border-radius: 12px;
   background: transparent;
+  -webkit-backdrop-filter: blur(15px);
   backdrop-filter: blur(15px);
   color: #fff;
   font-size: 1.2rem;
   font-weight: 700;
 }
 
-/* =====main====== */
-
-main {
-  margin-top: 20px;
+.active {
+  background: #b3b3b3;
 }
-.main-title {
-  color: #fff;
+
+/* main title*/
+main .main-select {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  color: #fff;
   margin-bottom: 50px;
 }
-
-.select-left {
+main .main-select-left {
   display: flex;
-  width: 190px;
   justify-content: space-between;
+  align-items: center;
+  width: 190px;
   color: #828a91;
 }
-
-.select-leftactive {
-  color: white;
+main .main-select-left .select-leftactive {
+  color: #fff;
   position: relative;
 }
-
-.select-leftactive::before {
+main .main-select-left .select-leftactive::before {
   content: "";
   width: 100%;
   height: 3px;
@@ -464,14 +405,13 @@ main {
   position: absolute;
   bottom: -10px;
 }
-
-.select-right {
-  width: 400px;
+main .main-select-right {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  width: 400px;
 }
-
-.select-time {
+main .main-select-right-time {
   width: 160px;
   height: 40px;
   line-height: 40px;
@@ -481,26 +421,23 @@ main {
   border-radius: 12px;
   overflow: hidden;
 }
-.time-button {
+main .main-select-right-time .time-button {
   width: 25%;
   text-align: center;
   background-color: #202225;
   color: #7f878e;
 }
-
-.time-buttonactive {
+main .main-select-right-time .time-buttonactive {
   background-color: #353840;
-  color: white;
+  color: #fff;
   cursor: default;
 }
-
-.time-button:hover {
+main .main-select-right-time .time-button:hover {
   background-color: gray;
-  color: white;
+  color: #fff;
 }
-
-.select-chains,
-.select-view {
+main .main-select-right-chains,
+main .main-select-right-view {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -511,44 +448,43 @@ main {
   transition: 0.2s;
   cursor: pointer;
 }
-
-.select-chains i {
+main .main-select-right-chains i,
+main .main-select-right-view i {
   margin-left: 12px;
   font-size: 12px;
 }
-
-.select-chains:hover,
-.select-view:hover {
+main .main-select-right .main-select-right-chains:hover,
+main .main-select-right .main-select-right-view:hover {
   border: #fff 1px solid;
 }
-
-.select-chains:hover i {
+main .main-select-right .main-select-right-chains:hover i,
+main .main-select-right .main-select-right-view:hover i {
   color: rgba(255, 255, 255, 0.2);
 }
 
+/* ================================================================= */
+/* main product*/
 .product-trending {
   display: flex;
-  color: white;
   justify-content: space-between;
   align-items: center;
+  color: white;
 }
-
 .product-trending-name {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
 }
-
 .product-trending-name img {
   width: 5rem;
   height: 5rem;
   border-radius: 12px;
   margin: 0 20px;
 }
-
 .product-trending-price {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   width: 270px;
 }
 
@@ -556,21 +492,17 @@ main {
   width: 1500px;
   position: relative;
 }
-
 .product-slide {
   overflow: hidden;
   padding-top: 20px;
 }
-
 .product-show {
   flex-wrap: nowrap;
   transition: 1s;
 }
-
 .product-show::-webkit-scrollbar {
   display: none;
 }
-
 .product-show-item {
   flex-shrink: 0;
   background-color: #303339;
@@ -579,45 +511,40 @@ main {
   overflow: hidden;
   color: white;
 }
-
 .product-show-item:hover {
   transform: translateY(-10px);
   transition: 0.4s;
 }
-
 .product-show-item .img {
   width: 100%;
   height: 200px;
   overflow: hidden;
 }
-
 .product-show-item img {
   width: 100%;
+  -o-object-fit: cover;
   object-fit: cover;
+  -o-object-position: center;
   object-position: center;
 }
-
 .product-show-item img:hover {
   transform: scale(1.1);
   transition: 0.4s;
 }
-
-.show-item-content {
+.product-show-item-content {
   padding: 10px 20px;
 }
-.show-item-content i {
+.product-show-item-content i {
   color: #2081e2;
   margin-left: 10px;
   margin-top: -10px;
 }
-
-.show-item-price {
+.product-show-item-price {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-top: 10px;
 }
-
 .product-next,
 .product-prev {
   position: absolute;
@@ -629,16 +556,13 @@ main {
   transform: translateY(-50%);
   opacity: 0;
   transition: 0.2s;
-}
-.product-next {
   right: -30px;
 }
-
 .product-prev {
+  right: unset;
   left: -30px;
 }
 
-/* ===footer============================================================== */
 footer {
   position: absolute;
   left: 0;
@@ -646,127 +570,347 @@ footer {
   background-color: #04111d;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
-
-.footer-top {
-  padding: 40px 0;
-  color: white;
+footer .footer-top {
+  color: #fff;
 }
-
-.footer-top p {
-  font-size: 16px;
-}
-
-.footer-login {
+footer .footer-top-left-login {
   width: 100%;
   display: flex;
 }
-
-.footer-top input {
+footer .footer-top-left-login input {
   padding: 7px 10px;
   font-size: 1.2rem;
   border: 1px solid #858f99;
   outline: none;
   background-color: transparent;
-  color: white;
+  color: #fff;
   border-radius: 12px;
   flex: 1;
-  margin-right: 20px;
   transition: 0.3s;
 }
-
-.footer-top input::placeholder {
+footer .footer-top-left-login input::-moz-placeholder {
   color: #858f99;
 }
-
-.footer-top input:hover {
+footer .footer-top-left-login input::placeholder {
+  color: #858f99;
+}
+footer .footer-top-left-login input:hover {
   border: 1px solid #fff;
 }
-
-.footer-top button {
+footer .footer-top-left-login button {
   padding: 14px 42px;
   border-radius: 12px;
   font-size: 18px;
-  color: white;
+  color: #fff;
   background-color: #2081e2;
   font-weight: 700;
   border: none;
   outline: none;
 }
-
-.foot__right i {
+footer .footer-top-right i {
   padding: 20px;
   background-color: #353840;
-  color: white;
+  color: #fff;
   font-size: 1.4rem;
   border-radius: 12px;
   margin-right: 20px;
 }
-
-.foot__right i:hover {
+footer .footer-top-right i:hover {
   background-color: #2081e2;
 }
-
-.footer-middle {
-  padding: 40px 0;
-  color: white;
+footer .footer-middle {
+  color: #fff;
 }
-
-.endfoot {
-  margin-bottom: 50px;
-}
-
-.footerbot {
+footer .footer-bot {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 30px 0;
+  color: #fff;
+}
+
+.m-1 {
+  margin: 10px;
+}
+.m-2 {
+  margin: 20px;
+}
+.m-3 {
+  margin: 30px;
+}
+.m-4 {
+  margin: 40px;
+}
+.m-5 {
+  margin: 50px;
+}
+
+.mt-1 {
+  margin-top: 10px;
+}
+.mt-2 {
+  margin-top: 20px;
+}
+.mt-3 {
+  margin-top: 30px;
+}
+.mt-4 {
+  margin-top: 40px;
+}
+.mt-5 {
+  margin-top: 50px;
+}
+
+.mr-1 {
+  margin-right: 10px;
+}
+.mr-2 {
+  margin-right: 20px;
+}
+.mr-3 {
+  margin-right: 30px;
+}
+.mr-4 {
+  margin-right: 40px;
+}
+.mr-5 {
+  margin-right: 50px;
+}
+
+.mb-1 {
+  margin-bottom: 10px;
+}
+.mb-2 {
+  margin-bottom: 20px;
+}
+.mb-3 {
+  margin-bottom: 30px;
+}
+.mb-4 {
+  margin-bottom: 40px;
+}
+.mb-5 {
+  margin-bottom: 50px;
+}
+
+.ml-1 {
+  margin-left: 10px;
+}
+.ml-2 {
+  margin-left: 20px;
+}
+.ml-3 {
+  margin-left: 30px;
+}
+.ml-4 {
+  margin-left: 40px;
+}
+.ml-5 {
+  margin-left: 50px;
+}
+
+.p-1 {
+  padding: 10px;
+}
+.p-2 {
+  padding: 20px;
+}
+.p-3 {
+  padding: 30px;
+}
+.p-4 {
+  padding: 40px;
+}
+.p-5 {
+  padding: 50px;
+}
+
+.pt-1 {
+  padding-top: 10px;
+}
+.pt-2 {
+  padding-top: 20px;
+}
+.pt-3 {
+  padding-top: 30px;
+}
+.pt-4 {
+  padding-top: 40px;
+}
+.pt-5 {
+  padding-top: 50px;
+}
+
+.pr-1 {
+  padding-right: 10px;
+}
+.pr-2 {
+  padding-right: 20px;
+}
+.pr-3 {
+  padding-right: 30px;
+}
+.pr-4 {
+  padding-right: 40px;
+}
+.pr-5 {
+  padding-right: 50px;
+}
+
+.pb-1 {
+  padding-bottom: 10px;
+}
+.pb-2 {
+  padding-bottom: 20px;
+}
+.pb-3 {
+  padding-bottom: 30px;
+}
+.pb-4 {
+  padding-bottom: 40px;
+}
+.pb-5 {
+  padding-bottom: 50px;
+}
+
+.pl-1 {
+  padding-left: 10px;
+}
+.pl-2 {
+  padding-left: 20px;
+}
+.pl-3 {
+  padding-left: 30px;
+}
+.pl-4 {
+  padding-left: 40px;
+}
+.pl-5 {
+  padding-left: 50px;
+}
+
+.df {
+  display: flex;
+}
+
+a {
+  text-decoration: none;
+  color: unset;
+}
+
+li {
+  list-style: none;
+}
+
+h3 {
   color: white;
+  font-size: 2rem;
 }
 
-/* ============================================================= */
-
-/* img {
-  width: 100%;
-  height: 100%;
-  object-position: center;
-  object-fit: cover;
-  transition: 0.5s;
-} */
-
-/* .image {
-  width: 18%;
-  height: 200px;
-  border-radius: 7px;
-  overflow: hidden;
-  margin: 10px 0;
+h4 {
+  font-size: 20px;
 }
 
-.image:hover img {
-  transform: scale(1.2);
-} */
-
-.gallery {
+.galleryUser {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   z-index: 9999;
   position: fixed;
   width: 100vw;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.7);
-  display: flex;
-  justify-content: center;
-  align-items: center;
   transition: 0.5s;
   opacity: 0;
   pointer-events: none;
 }
-
-.from-box {
+.galleryUser-inner {
   width: 500px;
   height: 500px;
-  background-color: red;
+  background-color: #202225;
+  border-radius: 18px;
+  overflow: hidden;
+}
+.galleryUser-inner-head {
+  height: 120px;
+  padding: 20px;
+  position: relative;
+}
+.galleryUser-inner-head::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 1px;
+  background-color: #292c30;
+  margin: 20px;
+}
+.galleryUser-inner-list {
+  height: 300px;
+  overflow: hidden;
+  color: #fff;
+}
+.galleryUser-inner-list p {
+  padding: 10px 20px;
+  display: flex;
+  align-items: center;
+}
+.galleryUser-inner-list img {
+  width: 30px;
+  height: 30px;
+  margin-right: 15px;
+}
+.galleryUser-inner-show {
+  width: 100%;
+  height: 80px;
+  background-color: #202225;
+  border: none;
+  outline: none;
+  border-top: 1px solid #292c30;
+  color: white;
 }
 
 .showgallery {
   opacity: 1;
   pointer-events: all;
 }
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  background: linear-gradient(0deg, #202225, #000);
+}
+
+body::-webkit-scrollbar,
+.galleryUser-inner-list::-webkit-scrollbar {
+  width: 10px;
+}
+
+body::-webkit-scrollbar-thumb,
+.galleryUser-inner-list::-webkit-scrollbar-thumb {
+  background: linear-gradient(to bottom, #ffa400, #00aefd);
+  border-radius: 100rem;
+}
+
+body::-webkit-scrollbar-track,
+.galleryUser-inner-list::-webkit-scrollbar-track {
+  background-color: gray;
+}
+
+.class-bg-body {
+  background: linear-gradient(0deg, #fff, #000);
+}
+
+.app {
+  width: 1500px;
+  padding: 20px 0;
+} /*# sourceMappingURL=style.css.map */
