--- a/style/style.css
+++ b/style/style.css
@@ -39,10 +39,24 @@
   padding: 5px 7px;
   background: #2d2e2f;
   -webkit-backdrop-filter: blur(100px);
-  backdrop-filter: blur(100px);
+          backdrop-filter: blur(100px);
   box-shadow: 20px 20px 60px #000, -20px -20px 60px #000;
   border-radius: 12px;
   cursor: text;
+  position: relative;
+}
+.search-history {
+  position: absolute;
+  bottom: 0;
+  top: 120%;
+  left: 0;
+  right: 0;
+  background-color: #303339;
+  border-radius: 12px;
+}
+.search-history span {
+  width: 100%;
+  line-height: 30px;
 }
 
 .search:hover {
@@ -117,9 +131,9 @@
 .Language::before {
   content: "";
   position: absolute;
-  top: 0px;
+  top: 20px;
   width: 100%;
-  height: 50px;
+  height: 30px;
 }
 
 .Resources_list {
@@ -308,9 +322,9 @@
   width: 1500px;
   height: 100%;
   -o-object-fit: cover;
-  object-fit: cover;
+     object-fit: cover;
   -o-object-position: center;
-  object-position: center;
+     object-position: center;
   transition: 0.4s;
   filter: grayscale(70%);
 }
@@ -368,7 +382,7 @@
   border-radius: 12px;
   background: transparent;
   -webkit-backdrop-filter: blur(15px);
-  backdrop-filter: blur(15px);
+          backdrop-filter: blur(15px);
   color: #fff;
   font-size: 1.2rem;
   font-weight: 700;
@@ -436,8 +450,7 @@ main .main-select-right-time .time-button:hover {
   background-color: gray;
   color: #fff;
 }
-main .main-select-right-chains,
-main .main-select-right-view {
+main .main-select-right-chains, main .main-select-right-view {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -448,8 +461,7 @@ main .main-select-right-view {
   transition: 0.2s;
   cursor: pointer;
 }
-main .main-select-right-chains i,
-main .main-select-right-view i {
+main .main-select-right-chains i, main .main-select-right-view i {
   margin-left: 12px;
   font-size: 12px;
 }
@@ -457,8 +469,7 @@ main .main-select-right .main-select-right-chains:hover,
 main .main-select-right .main-select-right-view:hover {
   border: #fff 1px solid;
 }
-main .main-select-right .main-select-right-chains:hover i,
-main .main-select-right .main-select-right-view:hover i {
+main .main-select-right .main-select-right-chains:hover i, main .main-select-right .main-select-right-view:hover i {
   color: rgba(255, 255, 255, 0.2);
 }
 
@@ -523,9 +534,9 @@ main .main-select-right .main-select-right-view:hover i {
 .product-show-item img {
   width: 100%;
   -o-object-fit: cover;
-  object-fit: cover;
+     object-fit: cover;
   -o-object-position: center;
-  object-position: center;
+     object-position: center;
 }
 .product-show-item img:hover {
   transform: scale(1.1);
@@ -545,8 +556,7 @@ main .main-select-right .main-select-right-view:hover i {
   align-items: center;
   margin-top: 10px;
 }
-.product-next,
-.product-prev {
+.product-next, .product-prev {
   position: absolute;
   color: white;
   padding: 20px 25px;
@@ -913,4 +923,4 @@ body::-webkit-scrollbar-track,
 .app {
   width: 1500px;
   padding: 20px 0;
-} /*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
