--- a/style/style.css
+++ b/style/style.css
@@ -894,6 +894,10 @@ h4 {
   font-family: "Poppins", sans-serif;
 }
 
+.app {
+  width: 1500px;
+}
+
 body {
   display: flex;
   justify-content: center;
@@ -919,8 +923,3 @@ body::-webkit-scrollbar-track,
 .class-bg-body {
   background: linear-gradient(0deg, #fff, #000);
 }
-
-.app {
-  width: 1500px;
-  padding: 20px 0;
-}/*# sourceMappingURL=style.css.map */
